--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "private": true,
   "dependencies": {
     "@cap-js/hana": "^1",
+    "@sap-ai-sdk/foundation-models": "^1.7.0",
+    "@sap-ai-sdk/orchestration": "^1.7.0",
     "@sap-cloud-sdk/http-client": "^3.26.0",
     "@sap-cloud-sdk/util": "^3.26.0",
     "@sap/cds": "^8",
